@@ -1,4 +1,5 @@
-
+2020-07-15 Franz Holzinger <franz@ttproducts.de>
+    * compatibility: Do not use the new command, but \TYPO3\CMS\Core\Utility\GeneralUtility::makeInstance to create the $GLOBALS['error'] object.
 
 2020-03-11 Franz Holzinger <franz@ttproducts.de>
     * new feature: Give the file name and the line number for the core ProductionExceptionHandler
